--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,16 +1,15 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 body{
-  position: relative;
-  overflow: hidden;
   cursor: none;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  
+  scrollbar-width: none;
 }
 
 body::-webkit-scrollbar {
@@ -18,23 +17,30 @@ body::-webkit-scrollbar {
 }
 
 .box {
-  width: 200px;
-  padding: 30px;
-  aspect-ratio: 1;
-  background-color: darkslategray;
-  /* cursor: pointer; */
-  /* transition: all cubic-bezier(.1,.5,.5,1) 0.4s; */
+  -webkit-mask-image: url(/src/assets/mask.svg);
+  mask-image: url(/src/assets/mask.svg);
+  -webkit-mask-origin: border-box;
+  mask-origin: border-box;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: 50%;
+  mask-position: 50%;
+  mask-repeat: no-repeat;
+  background: #ec4e39;
+  z-index: 1;
+  position: absolute;
+  color: black;
 }
 
-.circle-cur {
-  /* background-color: #111; */
-  background-color: rgb(255, 106, 0);
-  height: 20px;
-  aspect-ratio: 1;
-  border-radius: 50%;
+.box, .text {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 64px;
+  line-height: 66px;
+}
+
+.text {
   position: absolute;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  transition: all linear .1s;
 }
